Added query params validation on tax-profiles and invoices. Updated tests and openapi accordingly.
